<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activities.AcelLinealActivity">

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/graficaAcelerometro"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

    </com.github.mikephil.charting.charts.LineChart>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtXAcel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/materialGreen"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="X: 0.0" />

        <TextView
            android:id="@+id/txtYAcel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/materialBlue"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="Y: 0.0" />

        <TextView
            android:id="@+id/txtZAcel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/materialRed"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            tools:text="Z: 0.0" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnDatosAcel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/btn_datos" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnCalibrarAcel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/btn_calibrar" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />

        <Button
            android:id="@+id/btnLimpiarAcel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:onClick="onClick"
            android:text="@string/btn_limpiar" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="?android:attr/listDivider" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider" />

</LinearLayout>